// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new-tokenizer block: __test__/answer.ts 1`] = `
"import { createExTester } from '../../../jest.setup'


createExTester()
  .scan('fixtures', __dirname)
  .runAnswer()
"
`;

exports[`new-tokenizer block: __test__/fixtures/basic.json 1`] = `
"{
  \\"type\\": \\"waw\\",
  \\"cases\\": [
    {
      \\"description\\": \\"\\",
      \\"input\\": \\"text\\"
    }
  ]
}
"
`;

exports[`new-tokenizer block: __test__/waw.spec.ts 1`] = `
"import { createExTester, createTester } from '../../../jest.setup'


createTester()
  .scan('fixtures', __dirname)
  .runTest()


createExTester()
  .scan('fixtures', __dirname)
  .runTest()
"
`;

exports[`new-tokenizer block: README.md 1`] = `
"<header>
  <h1 align=\\"center\\">
    <a href=\\"https://github.com/guanghechen/yozora/tree/master/tokenizers/waw#readme\\">@yozora/tokenizer-waw</a>
  </h1>
  <div align=\\"center\\">
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-waw\\">
      <img
        alt=\\"Npm Version\\"
        src=\\"https://img.shields.io/npm/v/@yozora/tokenizer-waw.svg\\"
      />
    </a>
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-waw\\">
      <img
        alt=\\"Npm Download\\"
        src=\\"https://img.shields.io/npm/dm/@yozora/tokenizer-waw.svg\\"
      />
    </a>
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-waw\\">
      <img
        alt=\\"Npm License\\"
        src=\\"https://img.shields.io/npm/l/@yozora/tokenizer-waw.svg\\"
      />
    </a>
    <a href=\\"#install\\">
      <img
        alt=\\"Module Formats: cjs, esm\\"
        src=\\"https://img.shields.io/badge/module_formats-cjs%2C%20esm-green.svg\\"
      />
    </a>
    <a href=\\"https://github.com/nodejs/node\\">
      <img
        alt=\\"Node.js Version\\"
        src=\\"https://img.shields.io/node/v/@yozora/tokenizer-waw\\"
      />
    </a>
    <a href=\\"https://github.com/guanghechen/yozora/blob/master/packages/core-tokenizer#readme\\">
      <img
        alt=\\"Yozora Version\\"
        src=\\"https://img.shields.io/npm/dependency-version/@yozora/tokenizer-waw/@yozora/core-tokenizer\\"
      />
    </a>
    <a href=\\"https://github.com/prettier/prettier\\">
      <img
        alt=\\"Code Style: prettier\\"
        src=\\"https://img.shields.io/badge/code_style-prettier-ff69b4.svg?style=flat-square\\"
      />
    </a>
  </div>
</header>
<br/>


See [@yozora/tokenizer-waw documentation](https://yozora.guanghechen.com/docs/package/@yozora/tokenizer-waw) for details.

Some descriptions.

## Install

* npm

  \`\`\`bash
  npm install --save @yozora/tokenizer-waw @yozora/core-tokenizer @yozora/character
  \`\`\`

* yarn

  \`\`\`bash
  yarn add @yozora/tokenizer-waw @yozora/core-tokenizer @yozora/character
  \`\`\`

## Usage


## Related


[homepage]: https://github.com/guanghechen/yozora/tree/master/tokenizers/waw#readme
"
`;

exports[`new-tokenizer block: console 1`] = `
Array [
  Array [
    "answers:",
    Object {
      "BlockTokenizerPostParsePhaseHook__isNotLastHook": false,
      "TokenizerMatchBlockHook__isNotLastHook": true,
      "TokenizerParseBlockHook__isNotLastHook": false,
      "TokenizerPostMatchBlockHook__isNotLastHook": true,
      "cwd": "<WORKSPACE>/output",
      "fallbackTokenizerName": "paragraph",
      "isBlockTokenizer": true,
      "isMonorepo": true,
      "lastHook": "TokenizerParseBlockHook",
      "nodeModulesPath": "../../node_modules",
      "packageAuthor": "guanghechen",
      "packageDescription": "Some descriptions",
      "packageLocation": "tokenizers/waw",
      "packageName": "@yozora/tokenizer-waw",
      "packageUsage": "Some descriptions.",
      "packageVersion": "<LATEST>",
      "repositoryHomepage": "https://github.com/guanghechen/yozora/tree/master/tokenizers/waw#readme",
      "repositoryName": "yozora",
      "tokenizerCategory": "block",
      "tokenizerName": "waw",
      "toolPackageVersion": "<LATEST>",
      "tsconfigExtends": "../../tsconfig",
      "tsconfigSrcExtends": "../../tsconfig.settings",
      "useTokenizerMatchBlockHook": true,
      "useTokenizerParseBlockHook": true,
      "useTokenizerPostMatchBlockHook": false,
      "usingHooks": true,
    },
  ],
]
`;

exports[`new-tokenizer block: package.json 1`] = `
"{
  \\"name\\": \\"@yozora/tokenizer-waw\\",
  \\"version\\": \\"<LATEST>\\",
  \\"author\\": {
    \\"name\\": \\"guanghechen\\",
    \\"url\\": \\"https://github.com/guanghechen/\\"
  },
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/guanghechen/yozora.git\\",
    \\"directory\\": \\"tokenizers/waw\\"
  },
  \\"homepage\\": \\"https://github.com/guanghechen/yozora/tree/master/tokenizers/waw#readme\\",
  \\"keywords\\": [],
  \\"main\\": \\"lib/cjs/index.js\\",
  \\"module\\": \\"lib/esm/index.js\\",
  \\"types\\": \\"lib/types/index.d.ts\\",
  \\"source\\": \\"src/index.ts\\",
  \\"license\\": \\"MIT\\",
  \\"engines\\": {
    \\"node\\": \\">= 14.15.0\\"
  },
  \\"files\\": [
    \\"lib/\\",
    \\"!lib/**/*.js.map\\",
    \\"!lib/**/*.d.ts.map\\",
    \\"package.json\\",
    \\"CHANGELOG.md\\",
    \\"LICENSE\\",
    \\"README.md\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"cross-env NODE_ENV=production rollup -c rollup.config.js\\",
    \\"prebuild\\": \\"rimraf lib/\\",
    \\"prepublishOnly\\": \\"cross-env ROLLUP_SHOULD_SOURCEMAP=false yarn build\\",
    \\"test\\": \\"cross-env TS_NODE_FILES=true jest --config ../../jest.config.js --rootDir .\\",
    \\"update:test\\": \\"node -r ts-node/register -r tsconfig-paths/register __test__/answer.ts\\"
  },
  \\"dependencies\\": {
    \\"@yozora/ast\\": \\"^<LATEST>\\",
    \\"@yozora/character\\": \\"^<LATEST>\\",
    \\"@yozora/core-tokenizer\\": \\"^<LATEST>\\"
  },
  \\"devDependencies\\": {
    \\"@guanghechen/rollup-config\\": \\"^1.4.0\\",
    \\"@yozora/character\\": \\"^<LATEST>\\",
    \\"@yozora/core-tokenizer\\": \\"^<LATEST>\\",
    \\"@yozora/jest-for-tokenizer\\": \\"^<LATEST>\\",
    \\"rollup\\": \\"^2.40.0\\"
  }
}
"
`;

exports[`new-tokenizer block: rollup.config.js 1`] = `
"import createRollupConfig from '@guanghechen/rollup-config'
import manifest from './package.json'

const config = createRollupConfig({
  manifest,
  pluginOptions: {
    typescriptOptions: {
      tsconfig: 'tsconfig.src.json',
    },
  },
})

export default config
"
`;

exports[`new-tokenizer block: src/index.ts 1`] = `
"import { WawTokenizer } from './tokenizer'

export { WawTokenizer } from './tokenizer'
export { uniqueName as WawTokenizerName } from './types'
export type {
  WawType,
  Node as Waw,
  Token as WawToken,
  TokenizerProps as WawTokenizerProps,
} from './types'
export default WawTokenizer
"
`;

exports[`new-tokenizer block: src/tokenizer.ts 1`] = `
"import type { YastNode } from '@yozora/ast'
import type { NodePoint } from '@yozora/character'
import type {
  PhrasingContentLine,
  ResultOfEatAndInterruptPreviousSibling,
  ResultOfEatContinuationText,
  ResultOfEatLazyContinuationText,
  ResultOfEatOpener,
  ResultOfParse,
  Tokenizer,
  TokenizerMatchBlockHook,
  TokenizerParseBlockHook,
  TokenizerPostMatchBlockHook,
  YastBlockToken,
} from '@yozora/core-tokenizer'
import {
  BaseTokenizer,
  calcEndYastNodePoint,
  calcStartYastNodePoint,
} from '@yozora/core-tokenizer'
import type { Node, T, Token, TokenizerProps } from './types'
import { WawType, uniqueName } from './types'

/**
 * Lexical Analyzer for Waw
 */
export class WawTokenizer
  extends BaseTokenizer
  implements
    Tokenizer,
    TokenizerMatchBlockHook<T, Token>,
    TokenizerParseBlockHook<T, Token, Node>
 {
  public readonly isContainerBlock = false

  /* istanbul ignore next */
  constructor(props: TokenizerProps = {}) {
    super({
      name: uniqueName,
      priority: props.priority,
    })
  }

  /**
   * @override
   * @see TokenizerMatchBlockHook
   */
  public eatOpener(
    line: Readonly<PhrasingContentLine>,
    parentToken: Readonly<YastBlockToken>,
  ): ResultOfEatOpener<T, Token> {
    const { nodePoints, startIndex, endIndex, firstNonWhitespaceIndex } = line
    if (firstNonWhitespaceIndex >= endIndex) return null

    const nextIndex = endIndex
    const token: Token = {
      nodeType: WawType,
      position: {
        start: calcStartYastNodePoint(nodePoints, startIndex),
        end: calcEndYastNodePoint(nodePoints, nextIndex - 1),
      },
      lines: [{ ...line }],
    }

    return { token, nextIndex }
  }

  // /**
  //  * @override
  //  * @see TokenizerMatchBlockHook
  //  */
  // public eatAndInterruptPreviousSibling(
  //   line: Readonly<PhrasingContentLine>,
  //   prevSiblingToken: Readonly<YastBlockToken>,
  //   parentToken: Readonly<YastBlockToken>,
  // ): ResultOfEatAndInterruptPreviousSibling<T, Token> {
  //   return null
  // }

  // /**
  //  * @override
  //  * @see TokenizerMatchBlockHook
  //  */
  // public eatContinuationText(
  //   line: Readonly<PhrasingContentLine>,
  //   token: Token,
  //   parentToken: Readonly<YastBlockToken>,
  // ): ResultOfEatContinuationText {
  //   return { status: 'notMatched' }
  // }

  // /**
  //  * @override
  //  * @see TokenizerMatchBlockHook
  //  */
  // public eatLazyContinuationText(
  //   line: Readonly<PhrasingContentLine>,
  //   token: Token,
  //   parentToken: Readonly<YastBlockToken>,
  // ): ResultOfEatLazyContinuationText {
  //   const result = this.eatContinuationText(line, token, parentToken)
  //   return result as ResultOfEatLazyContinuationText
  // }

  /**
   * @override
   * @see TokenizerParseBlockHook
   */
  public parseBlock(
    token: Readonly<Token>,
    children?: YastNode[],
  ): ResultOfParse<T, Node> {
    const node: Node = { type: token.nodeType }
    return { classification: 'flow', node }
  }
}
"
`;

exports[`new-tokenizer block: src/types.ts 1`] = `
"import type { YastNode } from '@yozora/ast'
import type {
  BaseTokenizerProps,
  PartialYastBlockToken,
  PhrasingContentLine,
} from '@yozora/core-tokenizer'

export const WawType = 'waw'
export type T = typeof WawType

export const uniqueName = '@yozora/tokenizer-waw'

/**
 *
 * @example
 *    \`\`\`\`markdown
 *    \`\`\`\`
 *    ===>
 *    \`\`\`js
 *    \`\`\`
 */
export interface Node extends YastNode<T> {

}

export interface Token extends PartialYastBlockToken<T> {
  /**
   * Contents
   */
  lines: PhrasingContentLine[]
}


export type TokenizerProps = Omit<BaseTokenizerProps, 'name'>
"
`;

exports[`new-tokenizer block: tsconfig.json 1`] = `
"{
  \\"extends\\": \\"../../tsconfig\\",
  \\"include\\": [\\"src\\", \\"script\\", \\"__test__\\"]
}
"
`;

exports[`new-tokenizer block: tsconfig.src.json 1`] = `
"{
  \\"extends\\": \\"../../tsconfig.settings\\",
  \\"compilerOptions\\": {
    \\"declarationDir\\": \\"lib/types\\",
    \\"rootDir\\": \\"src\\"
  },
  \\"include\\": [\\"src\\"]
}
"
`;

exports[`new-tokenizer default: console 1`] = `
Array [
  Array [
    "answers:",
    Object {
      "BlockTokenizerPostParsePhaseHook__isNotLastHook": false,
      "TokenizerMatchBlockHook__isNotLastHook": true,
      "TokenizerParseBlockHook__isNotLastHook": false,
      "TokenizerPostMatchBlockHook__isNotLastHook": true,
      "cwd": "<WORKSPACE>/output",
      "fallbackTokenizerName": "text",
      "isInlineTokenizer": true,
      "isMonorepo": true,
      "lastHook": "TokenizerParseBlockHook",
      "nodeModulesPath": "../../node_modules",
      "packageAuthor": "guanghechen",
      "packageDescription": "",
      "packageLocation": "packages/tokenizer-inline-waw",
      "packageName": "@yozora/tokenizer-inline-waw",
      "packageUsage": "",
      "packageVersion": "<LATEST>",
      "repositoryHomepage": "https://github.com/guanghechen/yozora/tree/master/packages/tokenizer-inline-waw#readme",
      "repositoryName": "yozora",
      "tokenizerCategory": "inline",
      "tokenizerName": "inline-waw",
      "toolPackageVersion": "<LATEST>",
      "tsconfigExtends": "../../tsconfig",
      "tsconfigSrcExtends": "../../tsconfig.settings",
      "useTokenizerMatchBlockHook": true,
      "useTokenizerParseBlockHook": true,
      "useTokenizerPostMatchBlockHook": true,
      "usingHooks": true,
    },
  ],
]
`;

exports[`new-tokenizer inline: __test__/answer.ts 1`] = `
"import { createExTester } from '../../../jest.setup'


createExTester()
  .scan('fixtures', __dirname)
  .runAnswer()
"
`;

exports[`new-tokenizer inline: __test__/fixtures/basic.json 1`] = `
"{
  \\"type\\": \\"inlineWaw\\",
  \\"cases\\": [
    {
      \\"description\\": \\"\\",
      \\"input\\": \\"text\\"
    }
  ]
}
"
`;

exports[`new-tokenizer inline: __test__/inline-waw.spec.ts 1`] = `
"import { createExTester, createTester } from '../../../jest.setup'


createTester()
  .scan('fixtures', __dirname)
  .runTest()


createExTester()
  .scan('fixtures', __dirname)
  .runTest()
"
`;

exports[`new-tokenizer inline: README.md 1`] = `
"<header>
  <h1 align=\\"center\\">
    <a href=\\"https://github.com/guanghechen/yozora/tree/master/tokenizers/inline-waw#readme\\">@yozora/tokenizer-inline-waw</a>
  </h1>
  <div align=\\"center\\">
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-inline-waw\\">
      <img
        alt=\\"Npm Version\\"
        src=\\"https://img.shields.io/npm/v/@yozora/tokenizer-inline-waw.svg\\"
      />
    </a>
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-inline-waw\\">
      <img
        alt=\\"Npm Download\\"
        src=\\"https://img.shields.io/npm/dm/@yozora/tokenizer-inline-waw.svg\\"
      />
    </a>
    <a href=\\"https://www.npmjs.com/package/@yozora/tokenizer-inline-waw\\">
      <img
        alt=\\"Npm License\\"
        src=\\"https://img.shields.io/npm/l/@yozora/tokenizer-inline-waw.svg\\"
      />
    </a>
    <a href=\\"#install\\">
      <img
        alt=\\"Module Formats: cjs, esm\\"
        src=\\"https://img.shields.io/badge/module_formats-cjs%2C%20esm-green.svg\\"
      />
    </a>
    <a href=\\"https://github.com/nodejs/node\\">
      <img
        alt=\\"Node.js Version\\"
        src=\\"https://img.shields.io/node/v/@yozora/tokenizer-inline-waw\\"
      />
    </a>
    <a href=\\"https://github.com/guanghechen/yozora/blob/master/packages/core-tokenizer#readme\\">
      <img
        alt=\\"Yozora Version\\"
        src=\\"https://img.shields.io/npm/dependency-version/@yozora/tokenizer-inline-waw/@yozora/core-tokenizer\\"
      />
    </a>
    <a href=\\"https://github.com/prettier/prettier\\">
      <img
        alt=\\"Code Style: prettier\\"
        src=\\"https://img.shields.io/badge/code_style-prettier-ff69b4.svg?style=flat-square\\"
      />
    </a>
  </div>
</header>
<br/>


See [@yozora/tokenizer-inline-waw documentation](https://yozora.guanghechen.com/docs/package/@yozora/tokenizer-inline-waw) for details.

Some descriptions.

## Install

* npm

  \`\`\`bash
  npm install --save @yozora/tokenizer-inline-waw @yozora/core-tokenizer @yozora/character
  \`\`\`

* yarn

  \`\`\`bash
  yarn add @yozora/tokenizer-inline-waw @yozora/core-tokenizer @yozora/character
  \`\`\`

## Usage


## Related


[homepage]: https://github.com/guanghechen/yozora/tree/master/tokenizers/inline-waw#readme
"
`;

exports[`new-tokenizer inline: console 1`] = `
Array [
  Array [
    "answers:",
    Object {
      "BlockTokenizerPostParsePhaseHook__isNotLastHook": false,
      "TokenizerMatchBlockHook__isNotLastHook": true,
      "TokenizerParseBlockHook__isNotLastHook": false,
      "TokenizerPostMatchBlockHook__isNotLastHook": true,
      "cwd": "<WORKSPACE>/output",
      "fallbackTokenizerName": "text",
      "isInlineTokenizer": true,
      "isMonorepo": true,
      "lastHook": "TokenizerParseBlockHook",
      "nodeModulesPath": "../../node_modules",
      "packageAuthor": "guanghechen",
      "packageDescription": "Some descriptions",
      "packageLocation": "tokenizers/inline-waw",
      "packageName": "@yozora/tokenizer-inline-waw",
      "packageUsage": "Some descriptions.",
      "packageVersion": "<LATEST>",
      "repositoryHomepage": "https://github.com/guanghechen/yozora/tree/master/tokenizers/inline-waw#readme",
      "repositoryName": "yozora",
      "tokenizerCategory": "inline",
      "tokenizerName": "inlineWaw",
      "toolPackageVersion": "<LATEST>",
      "tsconfigExtends": "../../tsconfig",
      "tsconfigSrcExtends": "../../tsconfig.settings",
      "useTokenizerMatchBlockHook": true,
      "useTokenizerParseBlockHook": true,
      "useTokenizerPostMatchBlockHook": true,
      "usingHooks": true,
    },
  ],
]
`;

exports[`new-tokenizer inline: package.json 1`] = `
"{
  \\"name\\": \\"@yozora/tokenizer-inline-waw\\",
  \\"version\\": \\"<LATEST>\\",
  \\"author\\": {
    \\"name\\": \\"guanghechen\\",
    \\"url\\": \\"https://github.com/guanghechen/\\"
  },
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/guanghechen/yozora.git\\",
    \\"directory\\": \\"tokenizers/inline-waw\\"
  },
  \\"homepage\\": \\"https://github.com/guanghechen/yozora/tree/master/tokenizers/inline-waw#readme\\",
  \\"keywords\\": [],
  \\"main\\": \\"lib/cjs/index.js\\",
  \\"module\\": \\"lib/esm/index.js\\",
  \\"types\\": \\"lib/types/index.d.ts\\",
  \\"source\\": \\"src/index.ts\\",
  \\"license\\": \\"MIT\\",
  \\"engines\\": {
    \\"node\\": \\">= 14.15.0\\"
  },
  \\"files\\": [
    \\"lib/\\",
    \\"!lib/**/*.js.map\\",
    \\"!lib/**/*.d.ts.map\\",
    \\"package.json\\",
    \\"CHANGELOG.md\\",
    \\"LICENSE\\",
    \\"README.md\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"cross-env NODE_ENV=production rollup -c rollup.config.js\\",
    \\"prebuild\\": \\"rimraf lib/\\",
    \\"prepublishOnly\\": \\"cross-env ROLLUP_SHOULD_SOURCEMAP=false yarn build\\",
    \\"test\\": \\"cross-env TS_NODE_FILES=true jest --config ../../jest.config.js --rootDir .\\",
    \\"update:test\\": \\"node -r ts-node/register -r tsconfig-paths/register __test__/answer.ts\\"
  },
  \\"dependencies\\": {
    \\"@yozora/ast\\": \\"^<LATEST>\\",
    \\"@yozora/character\\": \\"^<LATEST>\\",
    \\"@yozora/core-tokenizer\\": \\"^<LATEST>\\"
  },
  \\"devDependencies\\": {
    \\"@guanghechen/rollup-config\\": \\"^1.4.0\\",
    \\"@yozora/character\\": \\"^<LATEST>\\",
    \\"@yozora/core-tokenizer\\": \\"^<LATEST>\\",
    \\"@yozora/jest-for-tokenizer\\": \\"^<LATEST>\\",
    \\"rollup\\": \\"^2.40.0\\"
  }
}
"
`;

exports[`new-tokenizer inline: rollup.config.js 1`] = `
"import createRollupConfig from '@guanghechen/rollup-config'
import manifest from './package.json'

const config = createRollupConfig({
  manifest,
  pluginOptions: {
    typescriptOptions: {
      tsconfig: 'tsconfig.src.json',
    },
  },
})

export default config
"
`;

exports[`new-tokenizer inline: src/index.ts 1`] = `
"import { InlineWawTokenizer } from './tokenizer'

export { InlineWawTokenizer } from './tokenizer'
export { uniqueName as InlineWawTokenizerName } from './types'
export type {
  InlineWawType,
  Node as InlineWaw,
  Token as InlineWawToken,
  TokenizerProps as InlineWawTokenizerProps,
} from './types'
export default InlineWawTokenizer
"
`;

exports[`new-tokenizer inline: src/tokenizer.ts 1`] = `
"import type { RootMeta as Meta, YastNode } from '@yozora/ast'
import type { NodePoint } from '@yozora/character'
import { calcEscapedStringFromNodePoints } from '@yozora/character'
import type {
  ResultOfFindDelimiters,
  ResultOfProcessFullDelimiter,
  Tokenizer,
  TokenizerMatchInlineHook,
  TokenizerParseInlineHook,
} from '@yozora/core-tokenizer'
import { BaseTokenizer } from '@yozora/core-tokenizer'
import type { Delimiter, Node, T, Token, TokenizerProps } from './types'
import { InlineWawType, uniqueName } from './types'

/**
 * Lexical Analyzer for InlineWaw
 */
export class InlineWawTokenizer
  extends BaseTokenizer
  implements
    Tokenizer,
    TokenizerMatchInlineHook<T, Delimiter, Token, Meta>,
    TokenizerParseInlineHook<T, Token, Node, Meta> {
  public readonly delimiterGroup: string

  /* istanbul ignore next */
  constructor(props: TokenizerProps = {}) {
    super({
      name: uniqueName,
      priority: props.priority,
    })
    this.delimiterGroup = props.delimiterGroup ?? this.name
  }

  /**
   * @override
   * @see TokenizerMatchInlineHook
   */
  public findDelimiter(
    startIndex: number,
    endIndex: number,
  ): ResultOfFindDelimiters<Delimiter> {
    const delimiter: Delimiter = {
      type: 'full',
      startIndex,
      endIndex,
    }
    return delimiter
  }

  /**
   * @override
   * @see TokenizerMatchInlineHook
   */
  public processFullDelimiter(
    fullDelimiter: Delimiter,
  ): ResultOfProcessFullDelimiter<T, Token> {
    const token: Token = {
      nodeType: InlineWawType,
      startIndex: fullDelimiter.startIndex,
      endIndex: fullDelimiter.endIndex,
    }
    return token
  }

  /**
   * @override
   * @see TokenizerParseInlineHook
   */
  public processToken(
    token: Token,
    children: YastNode[] | undefined,
    nodePoints: ReadonlyArray<NodePoint>,
  ): Node {
    const { startIndex, endIndex } = token
    let value: string = calcEscapedStringFromNodePoints(
      nodePoints,
      startIndex,
      endIndex
    )

    // Remove the spaces at the end of the line and beginning of the next line.
    value = value.replace(/[^\\\\S\\\\n]*\\\\n[^\\\\S\\\\n]*/g, '\\\\n')
    const node: Node = { type: InlineWawType, value }
    return node
  }
}
"
`;

exports[`new-tokenizer inline: src/types.ts 1`] = `
"import type { YastLiteral } from '@yozora/ast'
import type {
  BaseTokenizerProps,
  PartialYastInlineToken,
  YastTokenDelimiter,
} from '@yozora/core-tokenizer'

export const InlineWawType = 'inlineWaw'
export type T = typeof InlineWawType

export const uniqueName = '@yozora/tokenizer-inline-waw'

/**
 *
 * @example
 *    \`\`\`\`markdown
 *    \`\`\`\`
 *    ===>
 *    \`\`\`js
 *    \`\`\`
 */
export interface Node extends YastLiteral<T> {

}

export type Token = PartialYastInlineToken<T>

export type Delimiter = YastTokenDelimiter

export interface TokenizerProps extends Omit<BaseTokenizerProps, 'name'> {
  /**
   * Delimiter group identity.
   */
  readonly delimiterGroup?: string
}
"
`;

exports[`new-tokenizer inline: tsconfig.json 1`] = `
"{
  \\"extends\\": \\"../../tsconfig\\",
  \\"include\\": [\\"src\\", \\"script\\", \\"__test__\\"]
}
"
`;

exports[`new-tokenizer inline: tsconfig.src.json 1`] = `
"{
  \\"extends\\": \\"../../tsconfig.settings\\",
  \\"compilerOptions\\": {
    \\"declarationDir\\": \\"lib/types\\",
    \\"rootDir\\": \\"src\\"
  },
  \\"include\\": [\\"src\\"]
}
"
`;
